[explorer/frontend] fix: filter search result ist overflow, add loading indicator

--- a/explorer/frontend/styles/components/Filter.module.scss
+++ b/explorer/frontend/styles/components/Filter.module.scss
@@ -52,31 +52,15 @@
     }
 
 
-    .modal {
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 100;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-        background-color: #0001;
-        animation-name: fade-in;
-        animation-duration: 250ms;
-        animation-timing-function: linear;
 
-        .card {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            gap: $spacing-padding;
-            max-width: 41rem;
-            height: 22rem;
-            margin: 0 $spacing-padding;
-            box-shadow: 0 4px 40px 0 rgba(25, 41, 97, 29%);
-        }
+
+    .modal {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        gap: $spacing-padding;
+        max-width: 41rem;
+        height: 25rem;
 
         .buttonClose {
             position: absolute;
@@ -84,16 +68,26 @@
             right: 2rem;
         }
 
-        .resultList {
-            display: flex;
+        .resultListField {
             flex: 1;
-            flex-direction: column;
-            gap: $spacing-base;
             overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            gap: $spacing-base / 2;
+        }
+
+        .resultListContent {
+            display: flex;
+            flex-direction: column;
+            gap: $spacing-base / 2;
         }
 
         .resultItem {
             cursor: pointer;
+        }
+
+        .loadingIndicator {
+            margin: auto;
         }
     }
 }
